# promptCrafter

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Procfile  README.md  app.py  build.sh  config.py  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  gunicorn_config.py  main.py  models.py  ollama_client.py  pyqt_runner.py  requirements.txt  run_docker_build.sh  steps.md  utils.py
backend/: Drequirements.txt  alembic.ini  main.py  note.md  pyproject.toml  requirements.txt  run_app.sh  run_celery.sh  run_local.sh  run_prod.sh  setup.sh
backend/.data_src/: fake_prompts.json
backend/ai/: prompts.py
backend/auth/: admin_panel.py  dependencies.py  oauth2.py  send_mail.py
backend/core/: celery_tasks.py  config.py  create_superuser.py  custom_error_handlers.py  formatters.py  middleware.py  models.py  oauth2.py  ollama_client.py  ollama_prompt_tests.py  schemas.py
backend/db/: database.py  models.py  redis.py
backend/migrations/: env.py
backend/migrations/versions/: 29223a176eda_created_admin_and_verification_columns.py  2ea20b4e66d7_added_password_phone_number_created_at_.py  45d8b74a3311_add_user_rate_limit.py  (+8 more)
backend/models/: models.py
backend/routers/: process_prompt.py  prompt.py  user.py
backend/schema/: schemas.py
backend/services/: prompt_service.py  restructure_prompt_service.py  st_prompt_service.py  user_service.py
backend/static/: index.css  index.html  index.js  login.html
backend/tests/: conftest.py  test_process_prompt.py  test_prompt_routes.py  test_user_routes.py
backend/utility/: logger.py  tools.py
(+48 files in other folders)
