[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "fastapi[all]>=0.128.0",
    "gunicorn>=25.0.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "bcrypt>=4.0.1",
    "requests>=2.31.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "fastapi-admin>=1.0.4",
    "fastapi-mail>=1.6.1",
    "email-validator>=2.3.0",
    "pyjwt>=2.8.0",
    "fastapi-cache2[redis]",
    "fastapi-cache>=0.1.0",
    "sqladmin",
    "celery>=5.6.2",
    "asgiref>=3.11.1",
    "authlib>=1.6.7",
    "google-api-python-client>=2.189.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
]
